--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -538,7 +538,15 @@
                                     <option value="ctf_attendee" data-points="10">CTF Attendee (10 points)</option>
                                     <option value="ctf_easy_challenge" data-points="20">CTF Easy Challenge (20 points)</option>
                                     <option value="ctf_medium_challenge" data-points="40">CTF Medium Challenge (40 points)</option>
-                                    <option value="ctf_hard_challenge" data-points="80">CTF Hard Challenge (80 points)</option>
+                                    <option value="ctf_hard_challenge" data-points="60">CTF Hard Challenge (60 points)</option>
+                                    <option value="ctf_winner" data-points="75">CTF Winner (75 points)</option>
+                                    <option value="ctf_second_place" data-points="65">CTF Second Place (65 points)</option>
+                                    <option value="ctf_third_place" data-points="55">CTF Third Place (55 points)</option>
+                                    <option value="ctf_top_10" data-points="40">CTF Top 10 (40 points)</option>
+                                    <option value="ctf_winner_internal" data-points="60">CTF Winner Internal (60 points)</option>
+                                    <option value="ctf_second_internal" data-points="50">CTF Second Internal (50 points)</option>
+                                    <option value="ctf_third_internal" data-points="45">CTF Third Internal (45 points)</option>
+                                    <option value="ctf_internal_participated" data-points="30">CTF Internal Participated (30 points)</option>
                                 </optgroup>
                                 
                                 <!-- Content Creation -->
