--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -552,14 +552,13 @@
                                 <!-- Content Creation -->
                                 <optgroup label="------------Content------------">
                                     <option value="info_content" data-points="40">Info Content (40 points)</option>
-                                    <option value="blog_content" data-points="60">Blog Content (60 points)</option>
+                                    <option value="blog_content" data-points="45">Blog Content (45 points)</option>
                                     <option value="news_content" data-points="40">News Content (40 points)</option>
                                     <option value="caption" data-points="5">Caption (5 points)</option>
                                 </optgroup>
                                 
                                 <!-- Social Media -->
                                 <optgroup label="------------Social Media------------">
-                                    <option value="sm_posting" data-points="15">Social Media Posting (15 points)</option>
                                     <option value="brochure" data-points="10">Brochure (10 points)</option>
                                     <option value="video_editing" data-points="20">Video Editing (20 points)</option>
                                 </optgroup>
@@ -609,6 +608,9 @@
                                 
                                 <!-- Design Work -->
                                 <optgroup label="------------Design------------">
+                                    <option value="sm_posting" data-points="15">Social Media Posting (15 points)</option>
+                                    <option value="uiux" data-points="45">UIUX (45 points)</option>
+                                    <option value="misc" data-points="35">Misc (35 points)</option>
                                     <option value="blog_design" data-points="35">Blog Design (35 points)</option>
                                     <option value="info_design" data-points="45">Info Design (45 points)</option>
                                     <option value="news_design" data-points="45">News Design (45 points)</option>
