add point categories

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -561,6 +561,8 @@
                                 <optgroup label="------------Social Media------------">
                                     <option value="brochure" data-points="10">Brochure (10 points)</option>
                                     <option value="video_editing" data-points="20">Video Editing (20 points)</option>
+                                    <option value="photography" data-points="15">Photography (15 points)</option>
+                                    <option value="sm_content" data-points="15">SM content (15 points)</option>
                                 </optgroup>
                                 
                                 <!-- Organization -->
@@ -568,9 +570,8 @@
                                     <option value="subordinate" data-points="20">Subordinate (20 points)</option>
                                     <option value="idea" data-points="3">Idea (3 points)</option>
                                     <option value="demos" data-points="20">Demos (20 points)</option>
-                                    <option value="sf_lite" data-points="30">Sponsership & Finance Lite (30 points)</option>
-                                    <option value="sf_medium" data-points="60">Sponsership & Finance Medium (60 points)</option>
-                                    <option value="wtf" data-points="75">Sponsership & Finance Heavy (75 points)</option>
+                                    <option value="sf_lite" data-points="30">Sponsership & Finance Easy (30 points)</option>
+                                    <option value="sf_medium" data-points="60">Sponsership & Finance Hard (60 points)</option>
                                 </optgroup>
                                 
                                 <!-- Organizational Committee -->
