--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -524,6 +524,10 @@
                             </label>
                             <select class="form-select" id="memberCategory" name="category" required>
                                 <option value="">Select contribution type...</option>
+                                <!-- Attendance (fixed points) -->
+                                 <optgroup label="------------Attendance------------">
+                                    <option value="attendance" data-points="5">Attendance (5 points)</option>
+                                </optgroup>
                                 
                                 <!-- Development -->
                                 <optgroup label="------------Development------------">
@@ -586,7 +590,7 @@
                                 <optgroup label="------------Events------------">
                                     <option value="em_lite" data-points="15">EM Lite (15 points)</option>
                                     <option value="em_medium" data-points="30">EM Medium (30 points)</option>
-                                    <option value="em_heavy" data-points="60">EM Heavy (60 points)</option>
+                                    <option value="em_heavy" data-points="50">EM Heavy (50 points)</option>
                                 </optgroup>
                                 
                                 <!-- Community & Marketing -->
